--- a/css/style.css
+++ b/css/style.css
@@ -54,12 +54,12 @@ footer{
     padding: 15px;
 }
 
-#gallary{
+#gallery{
 
     text-align: center;
 }
 
-#gallary img{
+#gallery img{
 
     max-width: 100px;
 }
