--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,9 @@ header{
     color:#F2F3E9;
     background-color:#F0600E ;
     padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #song{
