--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,7 @@ header{
     color:#F2F3E9;
     background-color:#F0600E ;
     padding: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+   
 }
 
 #song{
@@ -63,9 +61,25 @@ footer{
 #gallery{
 
     text-align: center;
+    
 }
 
 #gallery img{
 
     max-width: 100px;
+}
+
+@media screen and (min-width: 60em){
+    figure{
+
+        display:grid;
+        grid-template-columns: 2fr 1fr;
+    }
+
+    figcaption{
+
+        display:flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
