added some more changes to the gallery

--- a/css/style.css
+++ b/css/style.css
@@ -81,5 +81,8 @@ footer{
         display:flex;
         justify-content: center;
         align-items: center;
+        font-size: 2rem;
+        margin-left: 1rem;
+        
     }
 }
