--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,19 @@
-body{
+body {
     font-family: "tilt warp";
     background-color: #2394EB;
     color:#A0CFE6;
 }
 
-h1, h2{
+h1, h2 {
     font-family: "tilt warp";
     font-size: 40pt;
 }
 
-header{
+header {
     text-align: center;
 }
 
-#hero{
+#hero {
     font-family: "tilt neon";
     color:#A0CFE6;
     background-color:#F0600E;
@@ -21,12 +21,12 @@ header{
     padding: 15px;
 }
 
-#hero img{
+#hero img { 
 
     width:300px
 }
 
-#bio{
+#bio {
     font-family: "tilt neon";
     color:#F2F3E9;
     background-color:#F0600E ;
@@ -34,13 +34,13 @@ header{
    
 }
 
-#song{
+#song {
     background-color: #F0600E;
     padding: 15px;
     text-align: center;
 }
 
-footer{
+footer {
 
     font-family: "tilt neon";
     color:#F2F3E9;
@@ -48,7 +48,7 @@ footer{
     padding: 15px;
 }
 
-#hobbies{
+#hobbies {
     font-family: "tilt neon";
     color:#F2F3E9;
     background-color:#2394EB ;
@@ -58,29 +58,27 @@ footer{
     align-items: center;
 }
 
-#gallery{
+#gallery {
 
     text-align: center;
     
 }
 
-#gallery img{
-
-    max-width: 100px;
+#gallery img {
+    max-width: 100%;
 }
 
-figure img{
-    width:100%;
+figure img {
+    /*width:100%;*/
 }
 
 @media screen and (min-width: 60em){
-    figure{
-
+    figure {
         display:grid;
         grid-template-columns: 2fr 1fr;
     }
 
-    figcaption{
+    figcaption {
 
         display:flex;
         justify-content: center;
@@ -89,4 +87,21 @@ figure img{
         margin-left: 1rem;
 
     }
+}
+
+@media screen and (min-width: 100em){
+
+    #gallery {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr ;
+    }
+
+    hr{
+        display: none;
+    }
+
+    #gallery h2{
+        grid-column: 1/-1;
+    }
+
 }
