--- a/css/style.css
+++ b/css/style.css
@@ -68,11 +68,8 @@ footer {
     max-width: 100%;
 }
 
-figure img {
-    /*width:100%;*/
-}
 
-@media screen and (min-width: 60em){
+@media screen and (min-width: 60em) {
     figure {
         display:grid;
         grid-template-columns: 2fr 1fr;
@@ -89,19 +86,33 @@ figure img {
     }
 }
 
-@media screen and (min-width: 100em){
+@media screen and (min-width: 100em) {
 
     #gallery {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr ;
     }
 
+
+    #gallery h2 {
+        grid-column: 1/-1;
+    }
+
     hr{
         display: none;
     }
 
-    #gallery h2{
-        grid-column: 1/-1;
+    figure {
+        display:block;
     }
 
+}
+
+#lit div{
+    max-width:100%;
+    columns: 40rem;
+}
+
+#lit h2{
+    text-align: center;
 }
