temp removed border

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     font-family: "tilt warp";
     background-color: #A0CFE6;
     color:  #2394EB;
-    border: 25px solid #F0600E;
+;
 }
 
 h1,
