--- a/css/nav.css
+++ b/css/nav.css
@@ -24,6 +24,13 @@ main{
 
 /* navbar */
 
+.navbar{
+    background-color: #333;
+    color:whitesmoke;
+    display:flex;
+    flex-direction: column;
+    font-size: 1.5rem;
+}
 
 
 /* logo */
