--- a/css/nav.css
+++ b/css/nav.css
@@ -65,15 +65,21 @@ main{
 
 .navbar-links a{
     color: whitesmoke;
-    background-attachment: #333;
+    background-color: #333;
     font-size: 1.5rem;
     padding: 1rem 1.25rem;
     letter-spacing: 2px;
     text-decoration: none;
     display: inline-block;
-    
+
 }
 
+.navbar-links a:hover, .navbar-links a:focus {
+    filter: invert(1);
+    border-radius: 10px;
+    outline: none;
+    
+}
 
 
 /* 
