--- a/css/nav.css
+++ b/css/nav.css
@@ -30,6 +30,7 @@ main{
     display:flex;
     flex-direction: column;
     font-size: 1.5rem;
+    padding: 1rem;
 }
 
 
@@ -78,7 +79,7 @@ main{
     filter: invert(1);
     border-radius: 10px;
     outline: none;
-    
+
 }
 
 
