--- a/css/nav.css
+++ b/css/nav.css
@@ -29,8 +29,8 @@ main{
     color:whitesmoke;
     display:flex;
     flex-direction: column;
-    font-size: 1.5rem;
-    padding: 1rem;
+    font-size: 1rem;
+    padding: .5rem;
 }
 
 
@@ -42,12 +42,12 @@ main{
 }
 
 .logo img{
-    height: 6vw;
-    width: 6vw;
+    height: 5vw;
+    width: 5vw;
 }
 
 .logo h1{
-    font-size: 1.2em;
+    font-size: 2em;
 }
 
 /* navigation list */
@@ -56,6 +56,7 @@ main{
     list-style: none;
     display: block;
     padding: 0.5em 0;
+    padding-right: 2.5em;
 }
 
 
@@ -88,3 +89,21 @@ media query for non-mobile nav bar
 min-width set to width of nav elements 
 such that no text wraps 
 */
+
+@media screen and (min-width: 60rem) {
+    .navbar-links{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .navbar{
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .navbar ul {
+        display: flex;
+        justify-content: space-between;
+    }
+}
